--- a/ci-cd/kubernetes/prod/OrderStatisticBackend-configmap-env.yml
+++ b/ci-cd/kubernetes/prod/OrderStatisticBackend-configmap-env.yml
@@ -5,7 +5,7 @@ metadata:
   name: OrderStatisticBackend-configmap-env
   namespace: OrderStatisticBackend-prod
 data:
-  SPRING_DATASOURCE_URL:
-  SPRING_DATASOURCE_USERNAME:
-  SPRING_DATASOURCE_PASSWORD:
+  SPRING_DATASOURCE_URL: jdbc:mysql://vm-dbn01.technodom.kz:3306/DeliveryBot?useUnicode=true&characterEncoding=utf8&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+  SPRING_DATASOURCE_USERNAME: root
+  SPRING_DATASOURCE_PASSWORD: g7nkn_SWwid
   JAVA_OPTS: ' -Xmx1G -Xms1G'
