--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,9 +6,9 @@
       hibernate:
         ddl-auto: update
     datasource:
-      url: jdbc:mysql://localhost:3307/test
-      password: root
-      username: root
+      url: ${SPRING_DATASOURCE_URL}
+      password: ${SPRING_DATASOURCE_USERNAME}
+      username: ${SPRING_DATASOURCE_PASSWORD}
 
   jwt:
       secret: samdheHRlELXqpSBsamdheHRlELXqpSB
